--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>To-Do List</h1>
+        <h1>ToDo List</h1>
         <input type="text" id="task-input" placeholder="Add a new task">
         <button id="add-task-button">Add Task</button>
         <ul id="task-list"></ul>
